--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
                                     <div class="column mcb-column mcb-item-bf02deee0 one column_button">
                                         <div class="button_align align_center">
                                             <a class="button  button_size_3 button_js" href="about.html"
-                                                style="background-color:#2d2b5f!important;color:#ffffff;">
+                                                style="background-color:#0a2747!important;color:#ffffff;">
                                                 <span class="button_label">Ver Más</span></a>
                                         </div>
                                     </div>
@@ -527,7 +527,7 @@
                                     <div class="column mcb-column mcb-item-86994b48c one column_button">
                                         <div class="button_align align_center">
                                             <a class="button  button_size_3 button_js" href="internet.html"
-                                                style="background-color:#2d2b5f!important;color:#ffffff;">
+                                                style="background-color:#0a2747!important;color:#ffffff;">
                                                 <span class="button_label">Ver Más</span></a>
                                         </div>
 
@@ -599,7 +599,7 @@
                                         <div class="button_align align_center">
                                             <a class="button  button_size_3 button_js"
                                                 href="serviciosTelecomunicaciones.html"
-                                                style="background-color:#2d2b5f!important;color:#ffffff;">
+                                                style="background-color:#0a2747!important;color:#ffffff;">
                                                 <span class="button_label">Ver Más</span></a>
                                         </div>
                                     </div>
@@ -641,7 +641,7 @@
                                     <div class="column mcb-column mcb-item-86994b48c one column_button">
                                         <div class="button_align align_center">
                                             <a class="button  button_size_3 button_js" href="equipos.html"
-                                                style="background-color:#2d2b5f!important;color:#ffffff;">
+                                                style="background-color:#0a2747!important;color:#ffffff;">
                                                 <span class="button_label">Ver Más</span></a>
                                         </div>
 
@@ -860,7 +860,7 @@
                                     <div class="column mcb-column mcb-item-bf02deee0 one column_button">
                                         <div class="button_align align_center">
                                             <a class="button  button_size_3 button_js" href="netsaSystem.html"
-                                                style="background-color:#2d2b5f!important;color:#ffffff;">
+                                                style="background-color:#0a2747!important;color:#ffffff;">
                                                 <span class="button_label">Ver Más</span></a>
                                         </div>
                                     </div>
