--- a/internetYacuba.html
+++ b/internetYacuba.html
@@ -724,7 +724,7 @@
                                                     <div class="button_align align_center"><a
                                                             class="button  button_size_3 button_js"
                                                             href="contactoGeneral.html"
-                                                            style="background-color:#2d2b5f!important;color:#ffffff;"><span
+                                                            style="background-color:#0a2747!important;color:#ffffff;"><span
                                                                 class="button_label">Contáctanos</span></a></div>
                                                 </div>
                                                 <div class="column mcb-column mcb-item-0acca663a one column_divider">
