--- a/serviciosTelecomunicaciones.html
+++ b/serviciosTelecomunicaciones.html
@@ -243,7 +243,7 @@
                           <div class="column mcb-column mcb-item-bf02deee0 one column_button">
                             <div class="button_align align_center">
                               <a class="button  button_size_3 button_js" href="contactoGeneral.html"
-                                style="background-color:#2d2b5f!important;color:#ffffff;">
+                                style="background-color:#0a2747!important;color:#ffffff;">
                                 <span class="button_label">Cotizar</span></a>
 
                             </div>
@@ -309,7 +309,7 @@
                           <hr class="no_line" style="margin:0 auto 5px" />
                           <div class="button_align align_center">
                             <a class="button  button_size_3 button_js" href="contactoGeneral.html"
-                              style="background-color:#2d2b5f!important;color:#ffffff;">
+                              style="background-color:#0a2747!important;color:#ffffff;">
                               <span class="button_label">Cotizar</span></a>
 
                           </div>
@@ -786,7 +786,7 @@
                         </p>
                         <div class="button_align align_center">
                           <a class="button  button_size_3 button_js" href="contactoGeneral.html"
-                            style="background-color:#2d2b5f!important;color:#ffffff;">
+                            style="background-color:#0a2747!important;color:#ffffff;">
                             <span class="button_label">Cotizar</span></a>
                         </div>
 
@@ -847,7 +847,7 @@
                     </div>
                     <div class="column mcb-column mcb-item-85cf1f832 one column_button">
                       <div class="button_align align_center"><a class="button  button_size_3 button_js"
-                          href="contactoGeneral.html" style="background-color:#2d2b5f!important;color:#ffffff;"><span
+                          href="contactoGeneral.html" style="background-color:#0a2747!important;color:#ffffff;"><span
                             class="button_label">Contáctanos</span></a></div>
                     </div>
                     <div class="column mcb-column mcb-item-0acca663a one column_divider">
