--- a/about.html
+++ b/about.html
@@ -214,11 +214,10 @@
 
                                     </div>
                                     <div id="tab-content-3" class="container tab-pane fade">
-                                        Conectar con tecnología inalámbrica, cuidades, regiones,
-                                        departamentos. Ser un aliado estratégico para nuestros
-                                        clientes, basados en soluciones y servicios innovadores
-                                        sobre la base de nuestro compromiso, calidad y
-                                        excelencia.
+                                        Conectar con tecnología inalámbrica y fibra óptica FTTH,
+                                        ciudades, regiones, departamentos. Ser un aliado estratégico
+                                        para nuestros clientes, basados en soluciones de conectividad,
+                                        sobre la base de nuestro compromiso, calidad y excelencia.
                                     </div>
                                 </div>
                             </div>
@@ -603,7 +602,7 @@
                             <p>&copy; <a href="index.html">Netsa SRL</a>,Sitio Web Creado 2022.</p>
                         </div>
                         <div class="col-md-6">
-                            <p>Desarrollado By <a href="netsaSystem.html"></i>Netsa System SRL.</a></p>
+                            <p>Desarrollado By <a href=""></i>Netsa System SRL.</a></p>
                         </div>
                     </div>
                 </div>
