--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                             velocidad y a precios muy competitivos.
                         </p>
                         <div class="carousel-btn">
-                            <a class="btn btn-custom" href="">MAS INFORMACION</a>
+                            <a class="btn btn-custom" href="internet.html">MAS INFORMACION</a>
 
                         </div>
                     </div>
@@ -1088,7 +1088,7 @@
                                             <p>&copy; <a href="index.html">Netsa SRL</a>,Sitio Web Creado 2022.</p>
                                         </div>
                                         <div class="col-md-6">
-                                            <p>Desarrollado By <a href="netsaSystem.html"></i>Netsa System SRL.</a></p>
+                                            <p>Desarrollado By <a href=""></i>Netsa System SRL.</a></p>
                                         </div>
                                     </div>
                                 </div>
