--- a/internetYacuba.html
+++ b/internetYacuba.html
@@ -107,6 +107,7 @@
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Servicios</a>
                         <div class="dropdown-menu">
                             <a href="internet.html" class="dropdown-item">Internet Inalambrico</a>
+                            <a href="fibra-optica.html" class="dropdown-item">Fibra Optica</a>
                             <a href="serviciosTelecomunicaciones.html" class="dropdown-item">Servicios de
                                 Telecomunicaciones</a>
                             <a href="equipos.html" class="dropdown-item">Equipos De Redes</a>
@@ -382,9 +383,9 @@
                                         <div class="column mcb-column mcb-item-15998ffdb one-third column_pricing_item">
                                             <div class="pricing-box  pricing-box-table">
                                                 <div class="plan-header">
-                                                    <h2>Plan ESTUDIANTIL<br />3 Mpbs</h2>
+                                                    <h2>Plan ESTUDIANTIL<br />4 Mpbs</h2>
                                                     <div class="price"><sup
-                                                            class="currency">Bs.</sup><span>175</span><sup
+                                                            class="currency">Bs.</sup><span>169</span><sup
                                                             class="period">/ mensual</sup></div>
                                                     <hr class="hr_color" />
 
@@ -405,9 +406,9 @@
                                         <div class="column mcb-column mcb-item-d20721cd6 one-third column_pricing_item">
                                             <div class="pricing-box  pricing-box-featured pricing-box-table">
                                                 <div class="plan-header">
-                                                    <h2>Plan RESIDENCIAL 1<br />4 Mpbs</h2>
+                                                    <h2>Plan RESIDENCIAL 1<br />5 Mpbs</h2>
                                                     <div class="price"><sup
-                                                            class="currency">Bs.</sup><span>190</span><sup
+                                                            class="currency">Bs.</sup><span>189</span><sup
                                                             class="period">/ mensual</sup></div>
                                                     <hr class="hr_color" />
 
@@ -428,7 +429,7 @@
                                         <div class="column mcb-column mcb-item-7c0dc7843 one-third column_pricing_item">
                                             <div class="pricing-box  pricing-box-table">
                                                 <div class="plan-header">
-                                                    <h2>Plan RESIDENCIAL 2<br />5 Mpbs</h2>
+                                                    <h2>Plan RESIDENCIAL 2<br />6 Mpbs</h2>
                                                     <div class="price"><sup
                                                             class="currency">Bs.</sup><span>250</span><sup
                                                             class="period">/ mensual</sup></div>
@@ -493,9 +494,9 @@
                                         <div class="column mcb-column mcb-item-15998ffdb one-third column_pricing_item">
                                             <div class="pricing-box  pricing-box-table">
                                                 <div class="plan-header">
-                                                    <h2>Plan RESIDENCIAL<br />6 Mpbs</h2>
+                                                    <h2>Plan RESIDENCIAL 3<br />7 Mpbs</h2>
                                                     <div class="price"><sup
-                                                            class="currency">Bs.</sup><span>310</span><sup
+                                                            class="currency">Bs.</sup><span>290</span><sup
                                                             class="period">/ mensual</sup></div>
                                                     <hr class="hr_color" />
 
@@ -516,7 +517,7 @@
                                         <div class="column mcb-column mcb-item-d20721cd6 one-third column_pricing_item">
                                             <div class="pricing-box  pricing-box-featured pricing-box-table">
                                                 <div class="plan-header">
-                                                    <h2>Plan RESIDENCIAL 4<br />7 Mpbs</h2>
+                                                    <h2>Plan RESIDENCIAL 4<br />8 Mpbs</h2>
                                                     <div class="price"><sup
                                                             class="currency">Bs.</sup><span>340</span><sup
                                                             class="period">/ mensual</sup></div>
@@ -767,7 +768,7 @@
                             <div class="container">
                                 <div class="column one column_column">
                                     <h2><i class="fa fa-tty" style='font-size:70px'></i> <b>Línea de Atención: +591
-                                            78106031</b>
+                                            76807074</b>
                                     </h2>
 
                                 </div>
@@ -908,7 +909,7 @@
                                     <p>&copy; <a href="index.html">Netsa SRL</a>,Sitio Web Creado 2022.</p>
                                 </div>
                                 <div class="col-md-6">
-                                    <p>Desarrollado By <a href="netsaSystem.html"></i>Netsa System SRL.</a></p>
+                                    <p>Desarrollado By <a href=""></i>Netsa System SRL.</a></p>
                                 </div>
                             </div>
                         </div>
