--- a/netsa/contact.html
+++ b/netsa/contact.html
@@ -414,7 +414,7 @@
                         <p>&copy; <a href="index.html">Netsa SRL</a>,Sitio Web Creado 2022.</p>
                     </div>
                     <div class="col-md-6">
-                        <p>Desarrollado By <a href="netsaSystem.html"></i>Netsa System SRL.</a></p>
+                        <p>Desarrollado By <a href=""></i>Netsa System SRL.</a></p>
                     </div>
                 </div>
             </div>
