--- a/internetYacuba.html
+++ b/internetYacuba.html
@@ -537,7 +537,7 @@
                                                             class="button_label">Verificar Cobertura</span></a></div>
                                             </div>
                                         </div>
-                                        <div class="column mcb-column mcb-item-7c0dc7843 one-third column_pricing_item">
+                                        <!-- <div class="column mcb-column mcb-item-7c0dc7843 one-third column_pricing_item">
                                             <div class="pricing-box  pricing-box-table">
                                                 <div class="plan-header">
                                                     <h2>Plan <br> PREMIUM<br />8 Mpbs</h2>
@@ -559,7 +559,7 @@
                                                         style="background-color:#ffbb01ff!important;color:#161616;"><span
                                                             class="button_label">Verificar Cobertura</span></a></div>
                                             </div>
-                                        </div>
+                                        </div> -->
                                         <div class="column mcb-column mcb-item-44jnksu00 one column_divider">
                                             <hr class="no_line" style="margin:0 auto 0px" />
                                         </div>
@@ -568,12 +568,7 @@
                             </div>
 
 
-
-
-
-
-
-                            <div class="wrap mcb-wrap mcb-wrap-xawby7ks3 one  valign-top clearfix" data-col="one"
+                            <!-- <div class="wrap mcb-wrap mcb-wrap-xawby7ks3 one  valign-top clearfix" data-col="one"
                                 style=>
                                 <div class="mcb-wrap-inner">
                                     <div class="column mcb-column mcb-item-ve27u1upc one column_column">
@@ -612,9 +607,9 @@
 
                                     <div class="wrap mcb-wrap mcb-wrap-600472de7 three-fourth  valign-top move-up clearfix"
                                         style="margin-top:-50px">
-                                        <div class="mcb-wrap-inner">
+                                        <div class="mcb-wrap-inner"> -->
 
-                                            <div
+                                            <!-- <div
                                                 class="column mcb-column mcb-item-15998ffdb one-third column_pricing_item">
                                                 <div class="pricing-box  pricing-box-table">
                                                     <div class="plan-header">
@@ -638,8 +633,8 @@
                                                                 class="button_label">Verificar Cobertura</span></a>
                                                     </div>
                                                 </div>
-                                            </div>
-                                            <div
+                                            </div> -->
+                                            <!-- <div
                                                 class="column mcb-column mcb-item-d20721cd6 one-third column_pricing_item">
                                                 <div class="pricing-box  pricing-box-featured pricing-box-table">
                                                     <div class="plan-header">
@@ -663,7 +658,7 @@
                                                                 class="button_label">Verificar Cobertura</span></a>
                                                     </div>
                                                 </div>
-                                            </div>
+                                            </div> -->
                                             <!-- <div class="column mcb-column mcb-item-7c0dc7843 one-third column_pricing_item">
                                                 <div class="pricing-box  pricing-box-table">
                                                     <div class="plan-header">
@@ -690,9 +685,9 @@
                                             <div class="column mcb-column mcb-item-44jnksu00 one column_divider">
                                                 <hr class="no_line" style="margin:0 auto 0px" />
                                             </div>-->
-                                        </div>
+                                        <!-- </div>
                                     </div>
-                                </div>
+                                </div> -->
 
 
 
@@ -775,12 +770,6 @@
                             </div>
                         </div>
                     </footer>
-
-
-
-
-
-
 
                     <!-- Facts Start -->
                     <div class="facts" data-parallax="scroll" data-image-src="img/facts.jpg">
