--- a/contact-internet.html
+++ b/contact-internet.html
@@ -204,9 +204,13 @@
                     <div class="section-header text-center">
                         <P>COBERTURA </P>
                         <h2> INTERNET ILIMITADO</h2>
+                      
                         <iframe
-                            src="https://www.google.com/maps/d/embed?mid=1_tbF45_ptIut3XEtZ8aPjVIcCOKX_-_S&hl=es&ehbc=2E312F"
+                            src="https://www.google.com/maps/d/u/0/embed?mid=1u9yIxG1UmTIEVc0SHFlriFgHsXzLF0E&ehbc=2E312F"
                             width="100%" height="300px"></iframe>
+                        <!-- <iframe
+                            src="https://www.google.com/maps/d/embed?mid=1_tbF45_ptIut3XEtZ8aPjVIcCOKX_-_S&hl=es&ehbc=2E312F"
+                            width="100%" height="300px"></iframe> -->
                     </div>
 
 
@@ -272,19 +276,19 @@
                         <label for="servicio" class="formulario__label">Tipo de Servicio</label>
                         <select id="servicio" name="listaempleados" class="formulario__input">
                             <option>PLAN HOGAR</option>
-                            <option>PLAN CORPORATIVO</option>
+                            <!-- <option>PLAN CORPORATIVO</option> -->
                         </select>
 
                         <label for="plan" class="formulario__label">Seleccione un Plan</label>
                         <select id="plan" name="listaservicios" class="formulario__input">
-                            <option>PLAN ESTUDIANTIL </option>
-                            <option>RESIDENCIAL 1 </option>
-                            <option>RESIDENCIAL 2 </option>
-                            <option>RESIDENCIAL 3</option>
-                            <option>RESIDENCIAL 4 </option>
-                            <option>PLAN PREMIUM </option>
+                            <option>Plan ESTUDIANTIL </option>
+                            <option>Plan RESIDENCIAL 1 </option>
+                            <option>Plan RESIDENCIAL 2 </option>
+                            <option>Plan RESIDENCIAL 3</option>
+                            <option>Plan RESIDENCIAL 4 </option>
+                            <!-- <option>PLAN PREMIUM </option>
                             <option>PLAN 1 CORPORATIVO </option>
-                            <option>PLAN 2 CORPORATIVO </option>
+                            <option>PLAN 2 CORPORATIVO </option> -->
                         </select>
 
                         <div id="geocode_map_input_1_11" class="leafletphp" data-leafletphp="geocode_map_input_1_11">
