--- a/contact.html
+++ b/contact.html
@@ -220,14 +220,18 @@
 					<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d60859.093821196395!2d-63.19584550547025!3d-17.569779933109686!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sbo!4v1652126237817!5m2!1ses!2sbo" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 					-->
 
-                        <iframe
+                        
+                        <!-- <iframe
                             src="https://www.google.com/maps/d/embed?mid=1LDqsv-i2OB6mn0vW6mCbig1f-oUVzyIL&ehbc=2E312F"
-                            width="400" height="300"></iframe>
+                            width="400" height="300"></iframe> -->
 
                     </div>
                     <div class="section-header text-center">
                         <P>COBERTURA </P>
                         <h2> INTERNET ILIMITADO</h2>
+                        <iframe
+                            src="https://www.google.com/maps/d/u/0/embed?mid=1f30K6o8yo-EMaue02Iuwd3-Rdm95C0M&ehbc=2E312F"
+                            width="400" height="300"></iframe>
                         <!--<iframe src="https://www.google.com/maps/d/embed?mid=1_tbF45_ptIut3XEtZ8aPjVIcCOKX_-_S&hl=es&ehbc=2E312F"
                     width="100%" height="300px" ></iframe>-->
                     </div>
@@ -295,7 +299,7 @@
                         <label for="servicio" class="formulario__label">Tipo de Servicio</label>
                         <select id="servicio" name="listaempleados" class="formulario__input">
                             <option>PLAN HOGAR</option>
-                            <option>PLAN CORPORATIVO</option>
+                            <!-- <option>PLAN CORPORATIVO</option> -->
                         </select>
 
                         <label for="plan" class="formulario__label">Seleccione un Plan</label>
@@ -305,9 +309,9 @@
                             <option>RESIDENCIAL 2 </option>
                             <option>RESIDENCIAL 3</option>
                             <option>RESIDENCIAL 4 </option>
-                            <option>PLAN PREMIUM </option>
+                            <!-- <option>PLAN PREMIUM </option>
                             <option>PLAN 1 CORPORATIVO </option>
-                            <option>PLAN 2 CORPORATIVO </option>
+                            <option>PLAN 2 CORPORATIVO </option> -->
                         </select>
 
                         <div id="geocode_map_input_1_11" class="leafletphp" data-leafletphp="geocode_map_input_1_11">
@@ -341,12 +345,12 @@
 
 
                         <label for='input_1_11_lat' class="formulario__label">Latitud</label>
-                        <input required="" class='gf_left_half formulario__input' id='input_1_11_lat' type='text'
+                        <input required="" class='gf_left_half formulario__input' id='input_1_11_lat' type='number'
                             disabled="" placeholder="Seleccionar en mapa">
 
                         <label for='input_1_11_lng' class="formulario__label">Longitud</label>
                         <input required="" disabled="" class='gf_right_half formulario__input' id='input_1_11_lng'
-                            type='text' placeholder="Seleccionar en mapa">
+                            type='number' placeholder="Seleccionar en mapa">
 
 
                         <div id="div_whasapp">
