--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             <a href="https://www.facebook.com/NetsaSRL/videos/?ref=page_internal">
                                 <i class="fab fa-youtube"></i>
                             </a>
-                            <a href="" class="usuario"> </a>
+                            <!-- <a  class="usuario"> </a> -->
                         </div>
                     </div>
                 </div>
@@ -125,6 +125,7 @@
                     <div>
                         <a href="login.html" class="nav-item nav-link"> <abbr title="INICIAR SESION"> <i
                                     class="fa fa-user-circle" style='font-size:30px'> </abbr></i> </a>
+                                    <a  class="usuario"> </a>
                     </div>
 
                     <!-- <div><a id="ejemploHover1" href="https://wa.me/59178018294/?text=tu%20texto%20personalizado"><i
