--- a/contact-fibra-optica.html
+++ b/contact-fibra-optica.html
@@ -231,8 +231,11 @@
                         <!-- <iframe src="https://www.google.com/maps/d/embed?mid=1_tbF45_ptIut3XEtZ8aPjVIcCOKX_-_S&hl=es&ehbc=2E312F"
                     width="100%" height="300px" ></iframe> -->
                         <iframe
-                            src="https://www.google.com/maps/d/embed?mid=1LDqsv-i2OB6mn0vW6mCbig1f-oUVzyIL&ehbc=2E312F"
+                            src="https://www.google.com/maps/d/u/0/embed?mid=1xG7SgfR38EG5JOQbywPPN1bdFtDB6Og&ehbc=2E312F"
                             width="400" height="300"></iframe>
+                        <!-- <iframe
+                            src="https://www.google.com/maps/d/embed?mid=1LDqsv-i2OB6mn0vW6mCbig1f-oUVzyIL&ehbc=2E312F"
+                            width="400" height="300"></iframe> -->
                     </div>
 
 
@@ -298,19 +301,19 @@
                         <label for="servicio" class="formulario__label">Tipo de Servicio</label>
                         <select id="servicio" name="listaempleados" class="formulario__input">
                             <option>PLAN HOGAR</option>
-                            <option>PLAN CORPORATIVO</option>
+                            <!-- <option>PLAN CORPORATIVO</option> -->
                         </select>
 
                         <label for="plan" class="formulario__label">Seleccione un Plan</label>
                         <select id="plan" name="listaservicios" class="formulario__input">
-                            <option>PLAN ESTUDIANTIL </option>
-                            <option>RESIDENCIAL 1 </option>
-                            <option>RESIDENCIAL 2 </option>
-                            <option>RESIDENCIAL 3</option>
-                            <option>RESIDENCIAL 4 </option>
-                            <option>PLAN PREMIUM </option>
+                            <option>Plan BASICO FO 10 Mpbs </option>
+                            <option>Plan STANDART FO 15 Mpbs </option>
+                            <option>Plan AVANZADO FO 20 Mpbs</option>
+                            <option>Plan AVANZADO 1 FO 25 Mpbs</option>
+                            <option>Plan AVANZADO 2 FO 30 Mpbs </option>
+                            <!-- <option>PLAN PREMIUM </option>
                             <option>PLAN 1 CORPORATIVO </option>
-                            <option>PLAN 2 CORPORATIVO </option>
+                            <option>PLAN 2 CORPORATIVO </option> -->
                         </select>
 
                         <div id="geocode_map_input_1_11" class="leafletphp" data-leafletphp="geocode_map_input_1_11">
