--- a/netsa-en-linea.html
+++ b/netsa-en-linea.html
@@ -92,7 +92,7 @@
                             <a href="https://www.facebook.com/NetsaSRL/videos/?ref=page_internal">
                                 <i class="fab fa-youtube"></i>
                             </a>
-                            <a href="" class="usuario"> </a>
+                            <!-- <a href="" class="usuario"> </a> -->
                         </div>
                     </div>
                 </div>
@@ -142,8 +142,9 @@
                         <div>
                             <a href="login.html" class="nav-item nav-link"> <abbr title="INICIAR SESION"> <i
                                         class="fa fa-user-circle" style='font-size:30px'> </abbr></i> </a>
+                                        
                         </div>
-
+                        <a  class="usuario"> </a>
                     </div>
 
 
@@ -189,7 +190,7 @@
             <div class="mcb-wrap-inner">
                 <div class="column mcb-column mcb-item-ve27u1upc one column_column">
                     <div class="column_attr clearfix align_center" style=>
-                        <h2< /h2>
+                        
                             <h4>¡Verifica y Realiza el pago de tus facturas de manera online!</h4>
                     </div>
                 </div>
@@ -223,7 +224,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="column mcb-column mcb-item-e59qvybp7 one-third column_hover_color">
+                <!-- <div class="column mcb-column mcb-item-e59qvybp7 one-third column_hover_color">
                     <div class="hover_color align_"
                         style="background-color:#d6d4fe;border-color:;border-radius:1px;overflow: hidden; border-radius: 30px;"
                         ontouchstart="this.classList.toggle('hover');">
@@ -235,7 +236,7 @@
                                     <div class="image_frame image_item no_link scale-with-grid no_border">
                                         <div class="image_wrapper"><img class="scale-with-grid lazyloaded"
                                                 src="imgNetsa/pago_factura.png" alt=" factura" title="" width="65"
-                                                height="50" data-ll-status="loaded">
+                                                height="50" data-ll-status="loaded"> -->
                                             <!--
                                                 <noscript>
                                                     <img class="scale-with-grid"
@@ -244,7 +245,7 @@
                                                 -->
 
 
-                                        </div>
+                                        <!-- </div>
                                     </div>
                                     <h3 style="color:#161616"> PAGO FACTURA</h3>
                                     <p style="color:#808080">PAGOS EN LINEA</p>
@@ -252,7 +253,7 @@
                             </a>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="column mcb-column mcb-item-6xy0l9bhq one-third column_hover_color">
                     <div class="hover_color align_"
                         style="background-color:#d6d4fe;border-color:;border-radius:1px;overflow: hidden; border-radius: 30px;"
