--- a/netsa/index.html
+++ b/netsa/index.html
@@ -129,8 +129,9 @@
                     <div>
                         <a href="login.html" class="nav-item nav-link"> <abbr title="INICIAR SESION"> <i
                                     class="fa fa-user-circle" style='font-size:30px'> </abbr></i> </a>
+                                    
                     </div>
-
+                    <a  class="usuario"> </a>
                     <!-- <div><a id="ejemploHover1" href="https://wa.me/59178018294/?text=tu%20texto%20personalizado"><i
                                     class="fab fa-whatsapp"></i> whatsapp</a>
                         </div>-->
