--- a/contactoGeneral.html
+++ b/contactoGeneral.html
@@ -74,7 +74,7 @@
                             <a href="https://www.facebook.com/NetsaSRL/videos/?ref=page_internal">
                                 <i class="fab fa-youtube"></i>
                             </a>
-                            <a href="" class="usuario"> </a>
+                            <!-- <a href="" class="usuario"> </a> -->
                         </div>
                     </div>
                 </div>
@@ -125,8 +125,9 @@
                         <div>
                             <a href="login.html" class="nav-item nav-link"> <abbr title="INICIAR SESION"> <i
                                         class="fa fa-user-circle" style='font-size:30px'> </abbr></i> </a>
+                                       
                         </div>
-
+                        <a  class="usuario"> </a>
                     </div>
 
                 </div>
