--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
                             <a href="https://www.facebook.com/NetsaSRL/videos/?ref=page_internal">
                                 <i class="fab fa-youtube"></i>
                             </a>
-                            <!-- <a  class="usuario"> </a> -->
+                            <!-- <a href="" class="usuario"> </a> -->
+                         
                         </div>
                     </div>
                 </div>
@@ -125,8 +126,9 @@
                     <div>
                         <a href="login.html" class="nav-item nav-link"> <abbr title="INICIAR SESION"> <i
                                     class="fa fa-user-circle" style='font-size:30px'> </abbr></i> </a>
-                                    <a  class="usuario"> </a>
+                                    
                     </div>
+                    <a  class="usuario"></a>
 
                     <!-- <div><a id="ejemploHover1" href="https://wa.me/59178018294/?text=tu%20texto%20personalizado"><i
                                     class="fab fa-whatsapp"></i> whatsapp</a>
