--- a/iniciar-session.html
+++ b/iniciar-session.html
@@ -69,7 +69,7 @@
                             <a href="https://www.facebook.com/NetsaSRL"><i class="fab fa-facebook-f"></i></a>
                             <a href=""><i class="fab fa-linkedin-in"></i></a>
                             <a href=""><i class="fab fa-instagram"></i></a>
-                            <a href="" class="usuario"> </a>
+                            <!-- <a href="" class="usuario"> </a> -->
                         </div>
                     </div>
                 </div>
