--- a/internet.html
+++ b/internet.html
@@ -79,7 +79,7 @@
                             <a href="https://www.facebook.com/NetsaSRL/videos/?ref=page_internal">
                                 <i class="fab fa-youtube"></i>
                             </a>
-                            <a href="" class="usuario"> </a>
+                            <!-- <a href="" class="usuario"> </a> -->
 
                         </div>
                     </div>
@@ -131,8 +131,9 @@
                         <div>
                             <a href="login.html" class="nav-item nav-link"> <abbr title="INICIAR SESION"> <i
                                         class="fa fa-user-circle" style='font-size:30px'> </abbr></i> </a>
+                                        
                         </div>
-
+                        <a  class="usuario"> </a>
                     </div>
 
 
