--- a/netsa/about.html
+++ b/netsa/about.html
@@ -114,8 +114,9 @@
                             <div>
                                 <a href="login.html" class="nav-item nav-link"> <abbr title="INICIAR SESION"> <i
                                             class="fa fa-user-circle" style='font-size:30px'> </abbr></i> </a>
+                                          
                             </div>
-
+                            <a  class="usuario"> </a>
 
                         </div>
 
