--- a/pago-facturas.html
+++ b/pago-facturas.html
@@ -82,7 +82,7 @@
                             <a href="https://www.facebook.com/NetsaSRL/videos/?ref=page_internal"><i
                                     class="fab fa-youtube"></i></a>
                             <a href=""><i class="fab fa-instagram"></i></a>
-                            <a href="" class="usuario"> </a>
+                            <!-- <a href="" class="usuario"> </a> -->
                         </div>
                     </div>
                 </div>
